--- a/src/main/resources/templates/attendance-detail.html
+++ b/src/main/resources/templates/attendance-detail.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title th:text="|${currentCourse} - 考勤|"></title>
+    <title th:text="|${currentCourse} - 签到详情|"></title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -206,21 +206,21 @@
                                     <thead>
                                     <tr>
                                         <th>学生姓名</th>
-                                        <th>签到状态</th>
-                                        <th>签到时间</th>
+                                        <th>提交状态</th>
+                                        <th>提交时间</th>
                                     </tr>
                                     </thead>
                                     <tfoot>
                                     <tr>
                                         <th>学生姓名</th>
-                                        <th>签到状态</th>
-                                        <th>签到时间</th>
+                                        <th>提交状态</th>
+                                        <th>提交时间</th>
                                     </tr>
                                     </tfoot>
                                     <tbody>
                                     <tr th:each="student : ${studentList}">
                                         <td th:text="${student.username}"></td>
-                                        <td th:text="${student.attended}"></td>
+                                        <td th:text="${student.submitted}"></td>
                                         <td th:text="${student.time}"></td>
                                     </tr>
                                     </tbody>
@@ -269,7 +269,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="/userLogout">Logout</a>
+                    <a class="btn btn-primary" href="userLogout">Logout</a>
                 </div>
             </div>
         </div>
