--- a/src/main/resources/templates/vote.html
+++ b/src/main/resources/templates/vote.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title th:text="|${currentCourse} - 签到|"></title>
+    <title th:text="|${currentCourse} - 考勤|"></title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.css" rel="stylesheet">
@@ -69,21 +69,21 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="attendance.html">
+                <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>签到</span>
+                    <span>课堂签到</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="homework.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>作业</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="vote.html">
+            <li class="nav-item active">
+                <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>投票</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="files.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>问卷调查</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -128,13 +128,13 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${currentUser}"></span>
                                 <img class="img-profile rounded-circle" src="images/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
+                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
@@ -159,99 +159,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">课堂签到</h1>
-                    </div>
-
-                    <form th:if="${memberType} eq 'admin'" action="attendanceCreate">
-                        <div class="card shadow mb-4">
-                            <div class="card-header">
-                                <nav class="navbar">
-                                    <span class="navbar-brand font-weight-bold text-primary">发起签到</span>
-                                    <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item">
-                                            <button class="btn btn-primary">确定</button>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                            <div class="card-body">
-                                <input name="title" type="text" class="mr-4" placeholder="标题">
-                                <span class="mr-2">开始时间</span>
-                                <input name="startTime" type="datetime-local" class="mr-4">
-                                <span class="mr-2">结束时间</span>
-                                <input name="endTime" type="datetime-local" class="mr-4">
-                            </div>
-                        </div>
-                    </form>
-
-                    <div th:if="${memberType} eq 'admin'" class="card shadow mb-4">
-                        <div class="card-header py-3">
-                            <span class="m-0 font-weight-bold text-primary">签到记录</span>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th>标题</th>
-                                            <th>开始时间</th>
-                                            <th>结束时间</th>
-                                            <th>学生人数</th>
-                                            <th>已签到人数</th>
-                                            <th>操作</th>
-                                        </tr>
-                                    </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>标题</th>
-                                            <th>开始时间</th>
-                                            <th>结束时间</th>
-                                            <th>学生人数</th>
-                                            <th>已签到人数</th>
-                                            <th>操作</th>
-                                        </tr>
-                                    </tfoot>
-                                    <tbody>
-                                        <tr th:each="attendance : ${attendanceList}">
-                                            <td th:text="${attendance.title}"></td>
-                                            <td th:text="${attendance.start_time}"></td>
-                                            <td th:text="${attendance.end_time}"></td>
-                                            <td th:text="${attendance.num_total}"></td>
-                                            <td th:text="${attendance.num_attended}"></td>
-                                            <td>
-                                                <form action="attendance-detail" method="post">
-                                                    <input hidden name="attendanceId" th:value="${attendance.id}">
-                                                    <button type="submit" class="btn btn-sm btn-primary">查看详情</button>
-                                                </form>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div th:if="${memberType} eq 'normal'" th:each="attendance : ${attendanceList_stu}" class="card shadow mb-4">
-                        <div class="card-header">
-                            <span class="m-0 font-weight-bold text-primary" th:text="${attendance.title}"></span>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-
-                            <form action="studentAttend">
-                                <span class="ml-4 mr-4 font-weight-bold" th:text="${attendance.status}"></span>
-                                <span class="mr-2">开始时间</span>
-                                <input readonly type="text" class="mr-4" th:value="${attendance.start_time}">
-                                <span class="mr-2">结束时间</span>
-                                <input readonly type="text" class="mr-4" th:value="${attendance.end_time}">
-                                <span>签到状态：</span>
-                                <span class="mr-4 font-weight-bold" th:text="${attendance.status_student}"></span>
-                                <input hidden name="attendanceId" th:value="${attendance.id}">
-                                <button th:if="${attendance.status} eq '正在签到' and ${attendance.status_student} eq '未签到'"
-                                        type="submit" class="btn btn-sm btn-primary">立即签到</button>
-                            </form>
-                            </div>
-                        </div>
+                        <h1 class="h3 mb-0 text-gray-800">投票</h1>
                     </div>
 
                 </div>
@@ -283,7 +191,7 @@
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
